# protocol-spec

./: .gitlab-ci.yml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
http/: Cargo.toml  cargo.toml
http/src/: http.rs  main.rs
lib/src/: lib.rs
lib/src/core/: protocol_reader.rs  protocol_writer.rs
src/: client.rs  http.rs  lib.rs  main.rs  utils.rs
src/core/: protocol_reader.rs  protocol_writer.rs
