[package]
name = "protocol-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["io-util", "macros", "rt", "net", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-macros = { version = "0.2.0-alpha.6" }
pin-project = "1.1.10"
memchr = "2.7.4"
async-trait = "0.1.88"
paste = "1.0.15"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
derive_builder = "0.20.2"
concat-idents = "1.1.5"
chrono = "0.4.42"


[[bin]]
name = "client"
path = "src/client.rs"



